<resources>
    <string name="app_name">Rexray_vision</string>
    <string name="capture">Capture</string>
    <string name="stop">Stop</string>
    <string name="new_project">New Project</string>
    <string name="project_name_format">Project: %1$s</string>
    <string name="settings">Settings</string>
    <string name="iso">ISO</string>
    <string name="shutter_speed">Shutter Speed (1/x s)</string>
    <string name="iso_value_format">%d</string>
    <string name="shutter_speed_value_format">1/%d s</string>
    <string name="capture_limit">Capture Limit</string>
    <string name="capture_count_format">Count: %d</string>
    <string name="permissions_required">Camera permissions are required to use this app.</string>
    <string name="capture_rate">Capture Rate (fps)</string>
    <string name="capture_rate_format">%d fps</string>
    <string name="analyze_iso">Analyze ISO</string>
    <string name="primary">Primary</string>
    <string name="client">Client</string>
    <string name="discover">Discover</string>
    <string name="connected_clients">Client List</string>
    <string name="arm">Arm</string>
    <string name="arm_button_description">Prepares the camera for a low-latency synchronized capture.</string>
    <string name="project_name_label">Project:</string>
    <string name="camera_name_label">Camera:</string>
    <string name="regenerate_camera_name_description">Regenerate Camera Name</string>
    <string name="client_mode">Client Mode</string>
    <string name="create_new_project">Create New Project (Primary)</string>
    <string name="join_project">Join Project (Client)</string>
    <string name="refresh">Refresh</string>
    <string name="become_a_server">Become a Server</string>
    <string name="leave_server">Leave Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="project_name_client_format">Project: %1$s</string>
    <string name="camera_name_client_format">Camera: %1$s</string>
    <string name="project_name_prefix">Project: %1$s</string>
    <string name="camera_name_prefix">Camera: %1$s</string>
    <string name="capture_limit_format">Limit: %d</string>

    <string name="migration_finalizing_writes">Finalizing Disk Writes...</string>
    <string name="migration_moving_to_gallery">Moving to Gallery...</string>
    <string name="migration_remaining_format">%d remaining</string>
    <string name="migration_percentage_format">%d%%</string>
</resources>