<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/iso" />

            <TextView
                android:id="@+id/isoValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/isoSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/analyzeSceneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/analyze_iso"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shutter_speed" />

            <TextView
                android:id="@+id/shutterSpeedValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/1000" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/shutterSpeedSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capture_rate" />

            <TextView
                android:id="@+id/captureRateValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30 fps" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/captureRateSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capture_limit" />

            <NumberPicker
                android:id="@+id/captureLimitPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>