<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.rexray_vision.HistogramView
        android:id="@+id/histogramView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/captureBorder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/capture_border"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textureView"
        app:layout_constraintEnd_toEndOf="@+id/textureView"
        app:layout_constraintStart_toStartOf="@+id/textureView"
        app:layout_constraintTop_toTopOf="@+id/textureView" />

    <TextView
        android:id="@+id/permissionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions_required"
        android:textColor="@android:color/white"
        android:background="#80000000"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/captureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newProjectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/new_project"
        app:layout_constraintBottom_toTopOf="@+id/captureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/projectNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#80000000"
        android:padding="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/newProjectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Project: Quirky-Wombat" />

    <TextView
        android:id="@+id/captureCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#80000000"
        android:padding="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/newProjectButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Count: 0" />

    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#80000000"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/projectNameTextView"
        android:layout_margin="16dp">

        <!-- ISO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iso"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/isoValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@android:color/white"
                tools:text="100"/>
        </LinearLayout>
        <SeekBar
            android:id="@+id/isoSeekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Shutter Speed -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shutter_speed"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/shutterSpeedValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@android:color/white"
                tools:text="1/1000"/>
        </LinearLayout>
        <SeekBar
            android:id="@+id/shutterSpeedSeekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Capture Rate -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_rate"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/captureRateValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@android:color/white"
                tools:text="30 fps"/>
        </LinearLayout>
        <SeekBar
            android:id="@+id/captureRateSeekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!-- Capture Limit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_limit"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/captureLimitValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@android:color/white"
                tools:text="50"/>
        </LinearLayout>
        <SeekBar
            android:id="@+id/captureLimitSeekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/analyzeSceneButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/analyze_iso"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
